# backrow_server

./: .env.sample  Cargo.toml  README.md
migrations/2020-08-10-092413_setup/: down.sql  up.sql
src/: debug.rs  env.rs  main.rs  schema.rs  vars.rs
src/db/: audit_logs.rs  channels.rs  emotes.rs  errors.rs  files.rs  helpers.rs  messages.rs  mod.rs  mod.rs~  restrains.rs  roles.rs  rooms.rs  users.rs  vars.rs  videos.rs
src/server/: asserts.rs  auth.rs  errors.rs  extractors.rs  helpers.rs  mod.rs  permissions.rs  rooms.rs  users.rs  ws.rs
src/server/rooms/: actions.rs  mod.rs
