[package]
name = "backrow_rust"
version = "0.1.0"
authors = ["Bonanov <38221096+bonanov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
lazy_static = "1.4.0"
failure = "0.1.8"
num_cpus = "1.13.0"
regex = "1.3.9"
actix-identity = "0.2.1"
bcrypt = "0.8"
futures = "0.3.5"
actix-web = "2.0"
reqwest = { version = "0.10", features = ["json"] }
actix-web-actors = "2.0.0"
actix-http = "1.0.1"
actix-multipart = "0.2.0"
actix-rt = "1.0"
actix-threadpool = "0.3.1"
diesel = { version = "^1.4.0", features = ["postgres", "chrono", "uuid", "r2d2", "uuid", "numeric", "64-column-tables"] }
uuid = { version = "0.6.5", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.111", features = ["derive"]}
serde_derive = "1.0.111"
serde_json="1.0.53"
tokio = { version = "0.2", features = ["full"] }

